--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:text="Registrarse"
         android:textAlignment="center"
         android:gravity="center_horizontal"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="28sp" />
 
     <EditText
