--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         >
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/activist"
             android:text="Equipos"
@@ -26,6 +26,12 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="25sp"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="200dp"
+            android:src="@drawable/liga" />
 
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
