--- a/app/src/main/res/layout/view.xml
+++ b/app/src/main/res/layout/view.xml
@@ -60,7 +60,7 @@
             </LinearLayout>
             <TextView
                 android:id="@+id/lemaEquipo"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Hasta el final vamos Real "
                 android:textColor="@color/subtext"
@@ -90,11 +90,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="2dp"
                     android:layout_marginLeft="2dp"
-                    android:fontFamily="@font/daughter"
+                    android:fontFamily="@font/little"
                     android:text=" 81.044"
-                    android:layout_marginTop="3dp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="6dp"
                     android:textColor="@color/subtext"
-                    android:textSize="14sp" />
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
